<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Data Sending</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="image_to_send">image to send</string>
    <string name="send_1_image">Send 1 image</string>
    <string name="send_2_images">Send 2 images</string>
    <string name="send_to">Send to...</string>

</resources>
