<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_send_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/send" />

    <EditText
        android:id="@+id/txt_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_send_text"
        android:layout_toLeftOf="@+id/btn_send_text"
        android:inputType="text"
        android:text="@string/hello_world" />

    <ImageView
        android:id="@+id/img_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_text"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_to_send"
        android:src="@drawable/ic_launcher" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/img_single"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_send_1_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/send_1_image" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/btn_send_2_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/send_2_images" />

    </LinearLayout>

</RelativeLayout>
